gccida/g1/try_crossjump_to_edge
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_crossjump_to_edge/src/cfgcleanup.c:1985:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v62 = ( __int64)v60[1]; 
                ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_crossjump_to_edge/src/cfgcleanup.c:1986:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v63 = ( __int64)v61[1]; 
                ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_crossjump_to_edge/src/cfgcleanup.c:1997:31: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
&& ( v72 != swap_condition( ( rtx_code)nmatchb) 
                              ^~~~~~~~
                              rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_crossjump_to_edge/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_crossjump_to_edge/src/cfgcleanup.c:1997:40: error: expected ')'
&& ( v72 != swap_condition( ( rtx_code)nmatchb) 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_crossjump_to_edge/src/cfgcleanup.c:1997:27: note: to match this '('
&& ( v72 != swap_condition( ( rtx_code)nmatchb) 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_crossjump_to_edge/src/cfgcleanup.c:2026:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v24 = ( rtx)end[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_crossjump_to_edge/src/cfgcleanup.c:2050:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v25 = ( rtx)v25[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_crossjump_to_edge/src/cfgcleanup.c:2066:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v24 = ( rtx)v24[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_crossjump_to_edge/src/cfgcleanup.c:2071:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v25 = ( rtx)v25[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_crossjump_to_edge/src/cfgcleanup.c:2096:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v24 = ( rtx)v24[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_crossjump_to_edge/src/cfgcleanup.c:2097:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v25 = ( rtx)v25[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_crossjump_to_edge/src/cfgcleanup.c:2111:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
end = ( rtx)end[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_crossjump_to_edge/src/cfgcleanup.c:2116:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
end = ( rtx)end[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_crossjump_to_edge/src/cfgcleanup.c:2122:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v26 = ( rtx)v26[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_crossjump_to_edge/src/cfgcleanup.c:2133:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v37 = ( _WORD *)v26[1]; 
                ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_crossjump_to_edge/src/cfgcleanup.c:2144:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v26 = ( rtx)v26[1]; 
            ^~~~~~
15 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_crossjump_to_edge/src/obj/cfgcleanup.o] Error 1
